CLM-30790 potential OOMEs in ApiLegalReportResourceV2 (#12443)